fix small component sizing on IE

--- a/proto/css/src/_hack.ie.less
+++ b/proto/css/src/_hack.ie.less
@@ -22,6 +22,10 @@
   }
 }
 
+.o-Tablist--slider__Button {
+  display: none; // remove tablist slider button on IE, which doesn’t support sliders
+}
+
 .o-Grid--represent,
 .o-Grid--members {
   .mx-clearfix();
@@ -65,6 +69,16 @@
 
 .c-BigAssIcon {
   margin: auto;
+}
+
+.c-Button {
+  padding: (0.5 * @g-lh) 1rem;
+}
+
+.c-LinkArrow__Icon {
+  width : @g-lh;
+  height: @g-lh;
+  margin-right: 1ch;
 }
 
 .c-LinkList__Item {
